# rest_rpc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codec.h  common.h  connection.h  const_vars.h  cplusplus_14.h  io_service_pool.h  main.cpp  meta_util.hpp  req_res协议.md  rest_rpc.vcxproj  rest_rpc.vcxproj.filters  router.h  rpc_server.h
.github/workflows/: ci.yml  clang-format.yml  code-coverage.yml  linux_clang.yml  linux_gcc.yml  linux_llvm_cov.yml  mac.yml  windows.yml
client/: async_client.hpp  client_util.hpp  main.cpp  test_client.vcxproj  test_client.vcxproj.filters
cmake/: build.cmake  develop.cmake
doc/: 单机上rest_rpc和brpc性能测试.md
examples/: CMakeLists.txt  client.cpp  server.cpp
examples/app_client/: CMakeLists.txt  app_client.vcxproj  app_client.vcxproj.filters  client.hpp  main.cpp
examples/client/: CMakeLists.txt  basic_client.vcxproj  main.cpp  server.crt
examples/server/: CMakeLists.txt  basic_server.vcxproj  basic_server.vcxproj.filters  gen.sh  main.cpp  qps.h  server.key
include/: async_client.hpp  client_util.hpp  codec.h  connection.h  const_vars.h  cplusplus_14.h  io_service_pool.h  meta_util.hpp  rest_rpc.hpp  router.h  rpc_client.hpp  rpc_server.h  string_view.hpp  sync_client.hpp  use_asio.hpp
include/rest_rpc/: asio_util.hpp  client.hpp  client_util.hpp  codec.h  connection.h  const_vars.h  cplusplus_14.h  error_code.h  function_name.h  io_context_pool.hpp  io_service_pool.h  logger.hpp  md5.hpp  meta_util.hpp  nonstd_any.hpp  rest_rpc_client.hpp  rest_rpc_protocol.hpp  rest_rpc_server.hpp  rest_stream.hpp  router.h  rpc_client.hpp  rpc_connection.hpp  rpc_router.hpp  rpc_server.h  rpc_server.hpp  string_resize.hpp  string_view.hpp  traits.h  use_asio.hpp  util.hpp
java/: pom.xml
java/src/main/java/org/restrpc/client/: AsyncRpcFunction.java  AsyncRpcFunctionImpl.java  Codec.java  JniUtils.java  LibraryFileUtils.java  NativeRpcClient.java  RestFuture.java  RpcClient.java
java/src/main/java/org/restrpc/examples/: AsyncInvokeExample.java  PassPojoAsArgumentExample.java
java/src/test/java/org/restrpc/test/: BasicClientTest.java
jni/: CMakeLists.txt  org_restrpc_client_NativeRpcClient.cc  org_restrpc_client_NativeRpcClient.h
test_client/: CMakeLists.txt  async_client.hpp  client_util.hpp  main.cpp  test_client.hpp  test_client.vcxproj  test_client.vcxproj.filters
tests/: CMakeLists.txt  bench.cpp  test_io_context_pool.cpp  test_rest_rpc.cpp  test_rest_rpc1.cpp
tests/doctest/: doctest.h
